--- a/pages/projects/allProjects.html
+++ b/pages/projects/allProjects.html
@@ -5,7 +5,7 @@
  
     let tt = new setTableParameter(
         'table2',        // ID of the container element
-        'allProjectes',         // Table ID and database name
+        'allPro',         // Table ID and database name
         'RawTable',      // ID of the row template to copy
         'RawAltTable',   // ID of alternate row to show on click
         false,            // Show table header?
