--- a/pages/projects/definition.html
+++ b/pages/projects/definition.html
@@ -5,7 +5,7 @@
     {
 
         console.log("تم تشغيل صفحة definition _________________________");
-        proId = localStorage.getItem('selectedProject');
+        proId = 'def_'+localStorage.getItem('selectedProject');
         dbNoUpgrade = await new noUpgrade(proId);
         let dbUpgrade = await new upgrade(proId);
 
