--- a/pages/projects/pands.html
+++ b/pages/projects/pands.html
@@ -4,6 +4,11 @@
     async function initItemsPage()
     {
         proId_ = "ite_" + localStorage.getItem("selectedProject");
+        const input = document.getElementById("pandText");
+    if (input)
+    {
+        input.placeholder = getLang(1260);
+    }
     }
     proId_ = "ite_" + localStorage.getItem("selectedProject");
 
@@ -16,10 +21,7 @@
         true, // Add alternate div when row is clicked?
         true // Start with new row?
     );
-    async function initAllProjectPage()
-    {
-        await tt.getAllRowsDataOnly();
-    }
+   
     // مستمع الحدث
     document.addEventListener("tableDataChanged", (event) =>
     {
@@ -31,15 +33,7 @@
     {
 
         const data = event.detail.kind;
-        const button = document.getElementById(data[0]);
-
-        button.classList.remove("buttonTT", "buttonT"); // لإعادة تشغيل الأنيميشن
-
-        button.classList.add("buttonTT");
-        button.className = "buttonTT"; // لإعادة تشغيل الأنيميشن
-
         console.log(`📢 تم الضغط علي ${data} ${data[0]} kkkkkkkkk---kkkkk`);
-
 
     });
 
@@ -66,7 +60,12 @@
         </thead>
         <tbody>
             <tr>
-                <td></td>
+                <td>
+                    <input id="pandNumber" type="text" placeholder="" 
+                    style="max-width: 20px;width: 20px; background-color: transparent; color: black" />
+       
+
+                </td>
                 <td>
                     <input id="pandText" type="text" placeholder="" readonly
                         style="border: none; background-color: transparent; color: black" />
@@ -81,9 +80,5 @@
     <button type="button" id="t_472_2" class="buttonT"></button>
 </div>
 <script>
-    const input = document.getElementById("pandText");
-    if (input)
-    {
-        input.placeholder = getLang(1260);
-    }
+ 
 </script>
